Update styles/styles.css by germanian boss
Co-authored-by: gdeamicis <gdeamicis11@gmail.com>

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ body {
     padding: 16px;
 }
 
-.imgcontainer {
+.img-container {
     text-align: center;
     padding: 24px 0px 12px 0px;
     position: relative
