--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,7 +67,7 @@ button:hover {
     opacity: 0.8;
 }
 
-.cancelBtn {
+.cancel-btn {
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
