--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,19 +16,22 @@ body {
 }
 
 .img-container {
-    text-align: center;
-    padding: 24px 0px 12px 0px;
-    position: relative
+    display: flex;
+    flex-direction: column;
+}
+
+.btn-container {
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
 }
 
 img.avatar {
-    width: 20%;
+    width: 12%;
     border-radius: 50%;
+    border: 1px red solid;
     display: block;
-    padding: 10%;
-    margin-top: 10%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 16px auto;
 }
 
 /* Set modal class to main div when js is ready */
@@ -61,11 +64,11 @@ input[type=text], input[type=password]{
     box-sizing: border-box;
 }
 
-button {
+.button {
     background-color: #04AA6D;
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
+    padding: 16px 20px;
+    margin: 8px auto;
     border: none;
     cursor: pointer;
     width: 100%;
@@ -77,7 +80,7 @@ button:hover {
 
 .cancel-btn {
     width: auto;
-    padding: 10px 18px;
+    padding: 10px 16px;
     background-color: #f44336;
 }
 
@@ -90,18 +93,19 @@ button:hover {
     margin-inline: auto;
 }
 
-span.psw {
+p.psw {
     float: right;
-    padding-top: 16px;
 }
 
 .close {
-    position: absolute;
-    right: 25px;
+    background-color: white;
+    border: none;
     top: 0;
     color: #000;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 700;
+    cursor: pointer;
+    align-self: flex-end;
 }
 
 .close:hover
